--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cclang"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Dave Huseby"]
 edition = "2018"
 description = "An implementation of the crypto construct language"
@@ -8,11 +8,14 @@ license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/dhuseby/cclang"
 
-
 [dependencies]
-base64 = "0.11.0"
-bs58 = "0.3.0"
-bytes = "0.5.4"
-gsm = "0.5.0"
-hex = "0.4.2"
+base64 = "0.11"
+bs58 = "0.3"
+bytes = "0.5"
+gsm = "1.2"
+hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
 sodiumoxide = "0.2"
+
+[dev-dependencies]
+serde_json = "1.0"
