--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cclang"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Dave Huseby"]
 edition = "2018"
 description = "An implementation of the crypto construct language"
@@ -12,10 +12,14 @@ repository = "https://github.com/dhuseby/cclang"
 base64 = "0.11"
 bs58 = "0.3"
 bytes = "0.5"
-gsm = "1.2"
+gsm = "1.3"
 hex = "0.4"
+rand = "0.7"
+semver = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 sodiumoxide = "0.2"
+structopt = "0.3"
 
 [dev-dependencies]
 serde_json = "1.0"
+serde_cbor = "0.11"
